@@ -37,7 +37,7 @@
 
 # Sub-directories containing system task
 
-SUBDIRS = free i2c install readline poweroff ramtron sdcard sysinfo
+SUBDIRS = free i2c install readline poweroff ramtron sdcard sysinfo usbmonitor
 
 # Create the list of installed runtime modules (INSTALLED_DIRS)
 
