@@ -1,5 +1,0 @@
-
-This application provides poweroff command
-
-	Source: NuttX
-	Date: 13. March 2011
